structural-typing/tests/ui/select_duplicate.stderr
error: Duplicate field 'name' in select! - first specification wins but duplicates are not allowed
  --> tests/ui/select_duplicate.rs:3:1
   |
 3 | #[structural]
   | ^^^^^^^^^^^^^
...
10 |     type Duplicate = user::select!(name, name);
   |                      ------------------------- in this macro invocation
   |
   = note: this error originates in the macro `__user__select_name` which comes from the expansion of the macro `user::select` (in Nightly builds, run with -Z macro-backtrace for more info)
